--- a/index.html
+++ b/index.html
@@ -57,9 +57,6 @@
             <div id="homeText">
                 <h2>Welcome to our Fitness club</h2>
                 <p>Be the best version of You!</p>
-                <img src="media/f3.gif" height="160px" width="160px" alt="">
-
-
             </div>
 
             <main class="container mt-2">
@@ -194,7 +191,7 @@
             <div class="row featurette" id="scroll">
                 <div class="col-md-7">
 
-                    <pre >
+                    <pre class="slide">
                         Personal Training
                         Group Fitness Classes
                         Physical Therapy
